<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<groupId>com.ctrip.infosec.flowtable4j</groupId>
	<artifactId>flowtable4j-parent</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>${project.artifactId} v${project.version}</name>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>2.6</version>
				<configuration>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.capgemini.platina.maven</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>2.0-platina-1</version>
				<configuration>
					<goals>deploy</goals>
					<!-- <autoversionsubmodules>true</autoversionsubmodules> -->
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<encoding>UTF-8</encoding>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.9</version>
				<configuration>
					<argLine>-Xmx2048M -XX:MaxPermSize=256M</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>2.7</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.1.2</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<properties>
		<spring.version>4.0.6.RELEASE</spring.version>
		<jackson.version>2.1.5</jackson.version>
		<slf4j.version>1.7.7</slf4j.version>
		<httpclient.version>4.3.2</httpclient.version>
		<sars.util.version>1.0.0-SNAPSHOT</sars.util.version>
		<infosec.monitor.version>1.0.2-SNAPSHOT</infosec.monitor.version>
		<ctrip.allinone.daljavaclient>1.3.0</ctrip.allinone.daljavaclient>
		<ctrip.allinone.datasource-locator>1.0-SNAPSHOT</ctrip.allinone.datasource-locator>
	</properties>

	<dependencyManagement>
		<dependencies>
            <!--预处理-->
			<dependency>
				<groupId>com.ctrip.infosec.flowtable4j</groupId>
				<artifactId>flowtable4j-biz</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>com.ctrip.infosec.flowtable4j</groupId>
				<artifactId>flowtable4j-bwrule</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>com.ctrip.infosec.flowtable4j</groupId>
				<artifactId>flowtable4j-model</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>com.ctrip.infosec.flowtable4j</groupId>
				<artifactId>flowtable4j-accountrule</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>com.ctrip.infosec.flowtable4j</groupId>
				<artifactId>flowtable4j-jobws</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.ctrip.infosec.flowtable4j</groupId>
				<artifactId>flowtable4j-dal</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.ctrip.infosec.flowtable4j</groupId>
				<artifactId>flowtable4j-cybersource</artifactId>
				<version>${project.version}</version>
			</dependency>

			<!-- All In One -->
			<dependency>
				<groupId>com.ctrip.platform</groupId>
				<artifactId>dal-java-client</artifactId>
				<version>${ctrip.allinone.daljavaclient}</version>
			</dependency>

			<dependency>
				<groupId>com.ctrip.datasource</groupId>
				<artifactId>datasource-locator</artifactId>
				<version>${ctrip.allinone.datasource-locator}</version>
			</dependency>

			<!-- Data Config Server -->
			<dependency>
				<groupId>com.ctrip.infosec.antifraud</groupId>
				<artifactId>configs-client</artifactId>
				<version>1.0.3-SNAPSHOT</version>
			</dependency>

			<!-- Ctrip Redis -->
			<dependency>
				<groupId>com.ctrip.credis</groupId>
				<artifactId>credis</artifactId>
				<version>2.1.0</version>
			</dependency>

			<!-- Clogging -->
			<dependency>
				<groupId>com.ctrip.framework.clogging</groupId>
				<artifactId>clogging-agent</artifactId>
				<version>3.3.1</version>
			</dependency>

			<dependency>
				<groupId>com.ctrip.framework.clogging</groupId>
				<artifactId>clogging-domain</artifactId>
				<version>3.0.0</version>
			</dependency>

			<dependency>
				<groupId>com.ctrip.framework.clogging</groupId>
				<artifactId>clogging-domain-thrift</artifactId>
				<version>3.3.0</version>
			</dependency>

			<!-- RabbitMQ -->
			<dependency>
				<groupId>org.springframework.amqp</groupId>
				<artifactId>spring-rabbit</artifactId>
				<version>1.4.1.RELEASE</version>
			</dependency>

			<!-- sars-monitor -->
			<dependency>
				<groupId>com.ctrip.infosec</groupId>
				<artifactId>infosec-monitor-client</artifactId>
				<version>${infosec.monitor.version}</version>
			</dependency>

			<!-- sars-util -->
			<dependency>
				<groupId>com.ctrip.infosec.sars</groupId>
				<artifactId>sars-util</artifactId>
				<version>${sars.util.version}</version>
			</dependency>
			<dependency>
				<groupId>com.ctrip.infosec.sars</groupId>
				<artifactId>sars-util-test</artifactId>
				<version>${sars.util.version}</version>
			</dependency>

			<!-- logs -->
			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-classic</artifactId>
				<version>1.1.2</version>
			</dependency>
			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-core</artifactId>
				<version>1.1.2</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>jcl-over-slf4j</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>jul-to-slf4j</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>log4j-over-slf4j</artifactId>
				<version>${slf4j.version}</version>
			</dependency>

			<!-- Spring -->
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-core</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-beans</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-context</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-context-support</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-web</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-webmvc</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-tx</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-oxm</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-orm</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-jdbc</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-jms</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-expression</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-aop</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-aspects</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-test</artifactId>
				<version>${spring.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>cglib</groupId>
				<artifactId>cglib-nodep</artifactId>
				<version>2.2.2</version>
			</dependency>
			<dependency>
				<groupId>org.aspectj</groupId>
				<artifactId>aspectjweaver</artifactId>
				<version>1.7.4</version>
			</dependency>
			<dependency>
				<groupId>org.aspectj</groupId>
				<artifactId>aspectjrt</artifactId>
				<version>1.7.4</version>
			</dependency>

			<!-- joda time -->
			<dependency>
				<groupId>joda-time</groupId>
				<artifactId>joda-time</artifactId>
				<version>2.7</version>
			</dependency>

			<!-- mybatis -->
			<dependency>
				<groupId>org.mybatis</groupId>
				<artifactId>mybatis</artifactId>
				<version>3.2.7</version>
			</dependency>
			<dependency>
				<groupId>org.mybatis</groupId>
				<artifactId>mybatis-spring</artifactId>
				<version>1.2.2</version>
			</dependency>
			<dependency>
				<groupId>com.microsoft.sqlserver</groupId>
				<artifactId>sqljdbc</artifactId>
				<version>4.0</version>
			</dependency>
			<dependency>
				<groupId>mysql</groupId>
				<artifactId>mysql-connector-java</artifactId>
				<version>5.1.34</version>
			</dependency>

			<!-- apache commons -->
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>3.1</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-math3</artifactId>
				<version>3.2</version>
			</dependency>
			<dependency>
				<groupId>commons-logging</groupId>
				<artifactId>commons-logging</artifactId>
				<version>1.1.3</version>
			</dependency>
			<dependency>
				<groupId>commons-pool</groupId>
				<artifactId>commons-pool</artifactId>
				<version>1.6</version>
			</dependency>
			<dependency>
				<groupId>commons-dbcp</groupId>
				<artifactId>commons-dbcp</artifactId>
				<version>1.4</version>
			</dependency>
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>2.4</version>
			</dependency>
			<dependency>
				<groupId>commons-fileupload</groupId>
				<artifactId>commons-fileupload</artifactId>
				<version>1.2.2</version>
			</dependency>
			<dependency>
				<groupId>commons-collections</groupId>
				<artifactId>commons-collections</artifactId>
				<version>3.2.1</version>
			</dependency>
			<dependency>
				<groupId>commons-beanutils</groupId>
				<artifactId>commons-beanutils</artifactId>
				<version>1.8.3</version>
			</dependency>
			<dependency>
				<groupId>commons-beanutils</groupId>
				<artifactId>commons-beanutils-core</artifactId>
				<version>1.8.3</version>
			</dependency>
			<dependency>
				<groupId>commons-digester</groupId>
				<artifactId>commons-digester</artifactId>
				<version>2.1</version>
			</dependency>
			<dependency>
				<groupId>commons-codec</groupId>
				<artifactId>commons-codec</artifactId>
				<version>1.9</version>
			</dependency>

			<!-- JSON -->
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-core</artifactId>
				<version>${jackson.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-databind</artifactId>
				<version>${jackson.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.module</groupId>
				<artifactId>jackson-module-jaxb-annotations</artifactId>
				<version>${jackson.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.jaxrs</groupId>
				<artifactId>jackson-jaxrs-json-provider</artifactId>
				<version>${jackson.version}</version>
			</dependency>

			<!-- HttpClient4 -->
			<dependency>
				<groupId>org.apache.httpcomponents</groupId>
				<artifactId>httpclient</artifactId>
				<version>${httpclient.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.httpcomponents</groupId>
				<artifactId>fluent-hc</artifactId>
				<version>${httpclient.version}</version>
			</dependency>

			<!-- XML -->
			<dependency>
				<groupId>xerces</groupId>
				<artifactId>xercesImpl</artifactId>
				<version>2.9.1</version>
			</dependency>

			<!-- validator -->
			<dependency>
				<groupId>org.hibernate</groupId>
				<artifactId>hibernate-validator</artifactId>
				<version>4.3.0.Final</version>
			</dependency>

			<!-- google guava -->
			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>17.0</version>
			</dependency>

			<!-- servlet -->
			<!--<dependency>-->
				<!--<groupId>javax.servlet</groupId>-->
				<!--<artifactId>javax.servlet-api</artifactId>-->
				<!--<version>3.0.1</version>-->
			<!--</dependency>-->
			<!--<dependency>-->
				<!--<groupId>javax.servlet.jsp</groupId>-->
				<!--<artifactId>javax.servlet.jsp-api</artifactId>-->
				<!--<version>2.2.1</version>-->
			<!--</dependency>-->
			<!--<dependency>-->
				<!--<groupId>jstl</groupId>-->
				<!--<artifactId>jstl</artifactId>-->
				<!--<version>1.2</version>-->
			<!--</dependency>-->
			<!--<dependency>-->
				<!--<groupId>taglibs</groupId>-->
				<!--<artifactId>standard</artifactId>-->
				<!--<version>1.1.2</version>-->
			<!--</dependency>-->

			<!-- unit test -->
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>4.11</version>
				<scope>test</scope>
			</dependency>

			<!--<dependency>-->
				<!--<groupId>redis.clients</groupId>-->
				<!--<artifactId>jedis</artifactId>-->
				<!--<version>2.6.2</version>-->
				<!--<scope>test</scope>-->
			<!--</dependency>-->

		</dependencies>
	</dependencyManagement>

	<repositories>
	  <repository>
		<id>ctripdev-public</id>
	 	<url>http://maven.dev.sh.ctripcorp.com:8081/nexus/content/groups/public/</url>
	  </repository>
    </repositories>

	<distributionManagement>
		<repository>
			<id>ctripdev-release</id>
			<url>http://maven.dev.sh.ctripcorp.com:8081/nexus/content/repositories/releases/</url>
		</repository>
		<snapshotRepository>
			<id>ctripdev-snapshots</id>
			<url>http://maven.dev.sh.ctripcorp.com:8081/nexus/content/repositories/snapshots/</url>
		</snapshotRepository>
	</distributionManagement>

	<modules>
		<module>flowtable4j-accountrule</module>
		<module>flowtable4j-bwrule</module>
		<module>flowtable4j-jobws</module>
		<module>flowtable4j-ws</module>
		<module>flowtable4j-dal</module>
		<module>flowtable4j-model</module>
		<module>flowtable4j-biz</module>
		<module>flowtable4j-cybersource</module>
  </modules>
</project>